[gd_scene load_steps=2 format=3 uid="uid://bq06x8imnsowr"]

[ext_resource type="Script" uid="uid://c1pyshjdxwqx2" path="res://addons/replay_qol/recorder_controller.gd" id="1_6qf2e"]

[node name="RecorderController" type="Recorder_Controller"]
script = ExtResource("1_6qf2e")

[node name="PopupPanel" type="PopupPanel" parent="."]
position = Vector2i(50, 400)
size = Vector2i(700, 50)
visible = true

[node name="Control" type="Control" parent="PopupPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 696.0
offset_bottom = 46.0

[node name="PlayStopButton" type="Button" parent="PopupPanel/Control"]
layout_mode = 0
offset_left = 293.0
offset_top = -9.0
offset_right = 386.0
offset_bottom = 22.0
text = "Play/Pause"

[node name="TimeLineSlider" type="HSlider" parent="PopupPanel/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="ReplayFrameCounter" type="Label" parent="PopupPanel/Control"]
layout_mode = 0
offset_left = 565.0
offset_right = 690.0
offset_bottom = 23.0
horizontal_alignment = 2
vertical_alignment = 1

[node name="PopupPanel2" type="PopupPanel" parent="."]
position = Vector2i(14, 15)
size = Vector2i(130, 320)

[node name="Control2" type="Control" parent="PopupPanel2"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 126.0
offset_bottom = 316.0

[node name="PopupPanel3" type="PopupPanel" parent="."]
size = Vector2i(350, 100)
visible = true

[node name="Control" type="Control" parent="PopupPanel3"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 346.0
offset_bottom = 96.0

[node name="FPS_Label" type="Label" parent="PopupPanel3/Control"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 255.0
offset_bottom = 31.0
text = "FPS: 0.0 Process (12.4ms)"

[node name="Memory_Label" type="Label" parent="PopupPanel3/Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 21.0
offset_right = 254.0
offset_bottom = 53.0
text = "Memory:"

[node name="Replay_Buffer_Label" type="Label" parent="PopupPanel3/Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 47.0
offset_right = 255.0
offset_bottom = 79.0
text = "Replay Buffer: 12.3MB"

[connection signal="pressed" from="PopupPanel/Control/PlayStopButton" to="." method="_on_play_stop_button_pressed"]
[connection signal="drag_started" from="PopupPanel/Control/TimeLineSlider" to="." method="_on_time_line_slider_drag_started"]
[connection signal="value_changed" from="PopupPanel/Control/TimeLineSlider" to="." method="_on_time_line_slider_value_changed"]
